@@ -20,4 +20,5 @@ remove = MetaYAML
 
 [Prereqs]
 Test::More = 0
+Sub::Exporter = 0
 
